Surpressing logs during testing